--- a/SelectionCommittee.Entities/SelectionCommittee.DAL.csproj
+++ b/SelectionCommittee.Entities/SelectionCommittee.DAL.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A460C67A-F19B-4911-9498-97FACB58137B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SelectionCommittee.Entities</RootNamespace>
-    <AssemblyName>SelectionCommittee.Entities</AssemblyName>
+    <RootNamespace>SelectionCommittee.DAL</RootNamespace>
+    <AssemblyName>SelectionCommittee.DAL</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -84,10 +84,18 @@
       <DependentUpon>202002271504219_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="DataContexts\FacultyMigrations\Configuration.cs" />
-    <Compile Include="DataContexts\UserDbContext.cs" />
-    <Compile Include="Models\Candidate.cs" />
+    <Compile Include="EF\ApplicationContext.cs" />
+    <Compile Include="Identity\ApplicationRoleManager.cs" />
+    <Compile Include="Identity\ApplicationUserManager.cs" />
+    <Compile Include="Interfaces\IClientManager.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Models\ApplicationRole.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\ClientProfile.cs" />
     <Compile Include="Models\Faculty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ClientManager.cs" />
+    <Compile Include="Repositories\IdentityUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -98,6 +106,7 @@
       <DependentUpon>202002271504219_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
