--- a/SelectionCommittee.Web/Web.config
+++ b/SelectionCommittee.Web/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="Facultycontext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=False;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
@@ -77,7 +77,7 @@
   </runtime>
   <entityFramework>
     <contexts>
-      <context type="SelectionCommittee.Entities.DataContexts.FacultyContext, SelectionCommittee.Entities">
+      <context type="SelectionCommittee.DAL.DataContexts.FacultyContext, SelectionCommittee.DAL, Version=1.0.0.0, Culture=neutral">
         <databaseInitializer type="SelectionCommittee.Entities.DataContexts.FacultyDbInitializer, SelectionCommittee.Entities" />
       </context>
     </contexts>
