--- a/SelectionCommittee.Web/Web.config
+++ b/SelectionCommittee.Web/Web.config
@@ -78,7 +78,7 @@
   <entityFramework>
     <contexts>
       <context type="SelectionCommittee.DAL.DataContexts.FacultyContext, SelectionCommittee.DAL, Version=1.0.0.0, Culture=neutral">
-        <databaseInitializer type="SelectionCommittee.Entities.DataContexts.FacultyDbInitializer, SelectionCommittee.Entities" />
+        <!--<databaseInitializer type="SelectionCommittee.Entities.DataContexts.FacultyDbInitializer, SelectionCommittee.Entities" />-->
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
