--- a/SelectionCommittee/SelectionCommittee.BLL/SelectionCommittee.BLL.csproj
+++ b/SelectionCommittee/SelectionCommittee.BLL/SelectionCommittee.BLL.csproj
@@ -64,10 +64,12 @@
     <Compile Include="DTO\EnrollmentDTO.cs" />
     <Compile Include="DTO\FacultyDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
+    <Compile Include="Infrastructure\EnrollmentModule.cs" />
     <Compile Include="Infrastructure\OperationDetails.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\ValidationException.cs" />
     <Compile Include="Interfaces\IEnrollmentService.cs" />
+    <Compile Include="Interfaces\IFacultyService.cs" />
     <Compile Include="Interfaces\IServiceCreator.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
