--- a/SelectionCommittee/SelectionCommittee.Web/SelectionCommittee.Web.csproj
+++ b/SelectionCommittee/SelectionCommittee.Web/SelectionCommittee.Web.csproj
@@ -240,6 +240,7 @@
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
     <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\Scripts.js" />
     <Content Include="Scripts\src\index.js" />
     <Content Include="Scripts\src\methods\defaults.js" />
     <Content Include="Scripts\src\methods\destroy.js" />
@@ -336,6 +337,8 @@
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\Faculty\Register.cshtml" />
+    <Content Include="Views\Faculty\Add.cshtml" />
+    <Content Include="Views\Faculty\ViewAll.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
